; ModuleID = '/home/carl/AnghaBench/mongoose/examples/PIC32/http_server/firmware/src/system_config/pic32mx_eth_sk2_encx24j600/framework/driver/spi/dynamic/extr_drv_spi_master_dma_tasks.c_DRV_SPI_MasterDMASendDummy8BitISR.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/PIC32/http_server/firmware/src/system_config/pic32mx_eth_sk2_encx24j600/framework/driver/spi/dynamic/extr_drv_spi_master_dma_tasks.c_DRV_SPI_MasterDMASendDummy8BitISR.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.DRV_SPI_DRIVER_OBJECT = type { i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64, i32 }

@SYS_DMA_TRANSFER_EVENT_COMPLETE = common dso_local global i64 0, align 8
@sDrvSpiTxDummy = common dso_local global i32* null, align 8
@PLIB_DMA_MAX_TRF_SIZE = common dso_local global i64 0, align 8
@DRV_SPI_DMA_TXFER_SIZE = common dso_local global i64 0, align 8
@DRV_SPI_DMA_DUMMY_BUFFER_SIZE = common dso_local global i64 0, align 8
@DRV_SPI_DMA_DUMMY_INPROGRESS = common dso_local global i32 0, align 4
@DRV_SPI_DMA_COMPLETE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @DRV_SPI_MasterDMASendDummy8BitISR(i64 %0, i32 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca %struct.DRV_SPI_DRIVER_OBJECT*, align 8
  %8 = alloca %struct.TYPE_2__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %12 = load i64, i64* %4, align 8
  %13 = load i64, i64* @SYS_DMA_TRANSFER_EVENT_COMPLETE, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  br label %60

16:                                               ; preds = %3
  %17 = load i64, i64* %6, align 8
  %18 = inttoptr i64 %17 to %struct.DRV_SPI_DRIVER_OBJECT*
  store %struct.DRV_SPI_DRIVER_OBJECT* %18, %struct.DRV_SPI_DRIVER_OBJECT** %7, align 8
  %19 = load %struct.DRV_SPI_DRIVER_OBJECT*, %struct.DRV_SPI_DRIVER_OBJECT** %7, align 8
  %20 = getelementptr inbounds %struct.DRV_SPI_DRIVER_OBJECT, %struct.DRV_SPI_DRIVER_OBJECT* %19, i32 0, i32 2
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  store %struct.TYPE_2__* %21, %struct.TYPE_2__** %8, align 8
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %56

26:                                               ; preds = %16
  %27 = load i32*, i32** @sDrvSpiTxDummy, align 8
  store i32* %27, i32** %9, align 8
  %28 = load i64, i64* @PLIB_DMA_MAX_TRF_SIZE, align 8
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = call i64 @MIN(i64 %28, i64 %31)
  %33 = load i64, i64* @DRV_SPI_DMA_TXFER_SIZE, align 8
  %34 = call i64 @MIN(i64 %32, i64 %33)
  %35 = load i64, i64* @DRV_SPI_DMA_DUMMY_BUFFER_SIZE, align 8
  %36 = call i64 @MIN(i64 %34, i64 %35)
  store i64 %36, i64* %10, align 8
  %37 = load %struct.DRV_SPI_DRIVER_OBJECT*, %struct.DRV_SPI_DRIVER_OBJECT** %7, align 8
  %38 = getelementptr inbounds %struct.DRV_SPI_DRIVER_OBJECT, %struct.DRV_SPI_DRIVER_OBJECT* %37, i32 0, i32 1
  %39 = load i32, i32* %38, align 4
  %40 = call i8* @PLIB_SPI_BufferAddressGet(i32 %39)
  store i8* %40, i8** %11, align 8
  %41 = load %struct.DRV_SPI_DRIVER_OBJECT*, %struct.DRV_SPI_DRIVER_OBJECT** %7, align 8
  %42 = getelementptr inbounds %struct.DRV_SPI_DRIVER_OBJECT, %struct.DRV_SPI_DRIVER_OBJECT* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = load i32*, i32** %9, align 8
  %45 = load i64, i64* %10, align 8
  %46 = load i8*, i8** %11, align 8
  %47 = call i32 @SYS_DMA_ChannelTransferAdd(i32 %43, i32* %44, i64 %45, i8* %46, i32 1, i32 1)
  %48 = load i32, i32* @DRV_SPI_DMA_DUMMY_INPROGRESS, align 4
  %49 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %50 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %49, i32 0, i32 1
  store i32 %48, i32* %50, align 8
  %51 = load i64, i64* %10, align 8
  %52 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %53 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %52, i32 0, i32 0
  %54 = load i64, i64* %53, align 8
  %55 = sub nsw i64 %54, %51
  store i64 %55, i64* %53, align 8
  br label %60

56:                                               ; preds = %16
  %57 = load i32, i32* @DRV_SPI_DMA_COMPLETE, align 4
  %58 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %59 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %58, i32 0, i32 1
  store i32 %57, i32* %59, align 8
  br label %60

60:                                               ; preds = %15, %56, %26
  ret void
}

declare dso_local i64 @MIN(i64, i64) #1

declare dso_local i8* @PLIB_SPI_BufferAddressGet(i32) #1

declare dso_local i32 @SYS_DMA_ChannelTransferAdd(i32, i32*, i64, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
